--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <main>
         <section>
             <h1>Welcome!</h1>
-            <img src="IMG_9097.jpg" alt="Welcome Photo" class="welcome-photo interactive-media" data-lightbox="true" />
+            <img src="IMG_9097.JPG" alt="Welcome Photo" class="welcome-photo interactive-media" data-lightbox="true" />
             <p class="welcome-text">Welcome to my Digital Portfolio, a curated space that reflects my academic growth, learning experiences, and personal development throughout the course MT 29: Principles and Strategies of Teaching in Medical Technology.</p>
             <div class="purpose-section">
                 <h2>Purpose of This Portfolio</h2>
@@ -137,3 +137,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
