--- a/reflection.html
+++ b/reflection.html
@@ -135,10 +135,10 @@
                 <p>Through this experience, I gained a deeper appreciation for the role of educators. Teaching requires not only knowledge and preparation but also creativity, empathy, and resilience. It reinforced my understanding that learning is a shared process—both teacher and student grow together through meaningful interaction.</p>
             </div>
             <div class="photo-row">
-                <img src="IMG_9036.jpg" alt="Reflection Photo 1" class="interactive-media" data-lightbox="true" />
-                <img src="IMG_9035.jpg" alt="Reflection Photo 2" class="interactive-media" data-lightbox="true" />
-              <img src="IMG_9033.jpg" alt="Reflection Photo 1" class="interactive-media" data-lightbox="true" />
-                <img src="IMG_9019.jpg" alt="Reflection Photo 2" class="interactive-media" data-lightbox="true" />
+                <img src="IMG_9036.jpg"  class="interactive-media" data-lightbox="true" />
+                <img src="IMG_9035.jpg"  class="interactive-media" data-lightbox="true" />
+              <img src="IMG_9033.jpg"  class="interactive-media" data-lightbox="true" />
+                <img src="IMG_9019.jpg"  class="interactive-media" data-lightbox="true" />
                 
             </div>
             
@@ -150,4 +150,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
