--- a/reflection.html
+++ b/reflection.html
@@ -147,7 +147,7 @@
                 <p>Through this experience, I gained a deeper appreciation for the role of educators. Teaching requires not only knowledge and preparation but also creativity, empathy, and resilience. It reinforced my understanding that learning is a shared process—both teacher and student grow together through meaningful interaction.</p>
             </div>
              <div class="photo-row">
-                <img src="A.jpg"  class="profile-photo interactive-media" data-lightbox="true" />
+                <src="A.jpg"  class="profile-photo interactive-media" data-lightbox="true" />
                 <img src="B.jpg"  class="profile-photo interactive-media"  data-lightbox="true" />
                 <img src="C.jpg"  class="profile-photo interactive-media"  data-lightbox="true" />
                 <img src="D.jpg"  class="profile-photo interactive-media" data-lightbox="true" />
@@ -162,6 +162,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
