--- a/educational.html
+++ b/educational.html
@@ -146,9 +146,9 @@
         <section>
             <h1>Educational Experiences</h1>
             <div class="photo-row">
-                <img src="DYN-8039.jpg" alt="Seminar Photo 1" class="interactive-media" data-lightbox="true" />
-                <img src="DYN-8068.jpg" alt="Seminar Photo 2" class="interactive-media" data-lightbox="true" />
-                <img src="DYN-8047.jpg" alt="Seminar Photo 3" class="interactive-media" data-lightbox="true" />
+                <img src="DYN8039.JPG" alt="Seminar Photo 1" class="interactive-media" data-lightbox="true" />
+                <img src="DYN8068.JPG" alt="Seminar Photo 2" class="interactive-media" data-lightbox="true" />
+                <img src="DYN8047.JPG" alt="Seminar Photo 3" class="interactive-media" data-lightbox="true" />
             </div>
             <a href="photo-album.html" class="see-more-btn">See more Photos</a>
             <div class="seminar-text">
@@ -172,3 +172,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
