--- a/educational.html
+++ b/educational.html
@@ -144,11 +144,11 @@
     </header>
     <main>
         <section>
-            <h1>Educational Experiences</h1>
+            <h1>Educational Health Seminar Reflection Page</h1>
             <div class="photo-row">
-                <img src="DYN8039.jpg" alt="Seminar Photo 1" class="interactive-media" data-lightbox="true" />
-                <img src="DYN8068.jpg" alt="Seminar Photo 2" class="interactive-media" data-lightbox="true" />
-                <img src="DYN8047.jpg" alt="Seminar Photo 3" class="interactive-media" data-lightbox="true" />
+                <img src="DYN8039.jpg" class="interactive-media" data-lightbox="true" />
+                <img src="DYN8068.jpg" class="interactive-media" data-lightbox="true" />
+                <img src="DYN8047.jpg"  class="interactive-media" data-lightbox="true" />
             </div>
             <a href="photo-album.html" class="see-more-btn">See more Photos</a>
             <div class="seminar-text">
@@ -172,5 +172,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
