--- a/reflection.html
+++ b/reflection.html
@@ -139,7 +139,13 @@
                 <img src="IMG_9035.JPG" alt="Reflection Photo 2" class="interactive-media" data-lightbox="true" />
               
             </div>
-            
+            <div class="video-section">
+                <h2>Health Seminar Video: Capturing Moments of Learning and Joy</h2>
+                <video controls class="interactive-media">
+                    <source src="1106.mp4" type="video/mp4" />
+                    Your browser does not support the video tag.
+                </video>
+            </div>
         </section>
     </main>
     <footer>
@@ -148,3 +154,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
