--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
             <div class="contact-details">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <p><strong>Email:</strong> francescamelinapfrange@su.edu.ph</p>
+                    <p><strong>Emaiil:</strong> francescamelinapfrange@su.edu.ph</p>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-map-marker-alt"></i>
@@ -121,4 +121,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
